# easy_project

auth_service/: .example.env  alembic.ini  pyproject.toml
auth_service/src/app/: main.py
auth_service/src/app/migrations/: env.py
auth_service/src/app/models/: users.py
auth_service/src/app/utils/: database.py
